Wed Apr  6 11:36:44 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_initialize):
	  pop pushed error after each try of reading. fixes #4550

Mon Apr  4 21:41:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_syswrite): While local FS writes are usually
	  buffered, the buffers can be full or the file opened with
	  O_SYNC. IO#syswrite can also be used on blocking IOs
	  (pipe/socket) just like IO#write.
	  The patch is written by Eric Wong. [ruby-core:35554]

Fri Mar 25 19:39:40 2011  Ben Walton <bwalton@artsci.utoronto.ca>

	* test/test_syslog.rb:
	  Skip syslog tests that rely on LOG_PERROR unless it's defined

	  Instead of checking looking at the platform to determine if the tests
	  relying on LOG_PERROR should be run, look for the definition of the
	  constant as this will be robust against all platforms as long as the
	  underlying syslog.c code sets it up correctly.

	  This specifically addresses failures on Solaris 9.

	  Use LOG_PID instead of LOG_PERROR in Syslog.open test

          LOG_PERROR isn't a POSIX option for syslog, so it fails on platforms
	  that don't define it.  Solaris 9 and 10 are examples of this.

	  Use LOG_PID instead.

Thu Mar 24 11:36:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_x509name.c: id_aref's type is ID.

Thu Mar 24 09:56:19 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_ocsp.c (ossl_ocspreq_verify): flags is VALUE,
	  so it should use NUM2INT.

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_verify): ditto.

Wed Mar 23 08:07:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): fix inaccurate results.

Wed Mar 23 00:12:16 2011  Tajima Akio <artonx@yahoo.co.jp>

	* win32/win32.c: wait process real termination after reading 
	  exit code. fixes #4518

Wed Mar 16 15:06:21 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/openssl/lib/openssl/buffering.rb (module OpenSSL): #flush should